add component to login page

--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -1,1 +1,9 @@
-<p>login-page works!</p>
+<section>
+    <main>
+        <img src="" alt="">
+        <h1>Welcome to Notes</h1>
+        <p>please log in to continue</p>
+        <login-form></login-form>
+        <p>No account yet<a href="">Sign up</a></p>
+    </main>
+</section>
