create a styles sass file for universal variables

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+//Light theme
+$light-theme-light-background: #E0E4EA;
+$light-theme-dark-background: #525866;
+$light-theme-title-color: #0E121B;
+$light-theme-text-black: #232530;
+$light-theme-text-gray: #525866;
+
+
+$button: #335CFF;
+$delete-button: #FB3748;
