add all global variables

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,13 @@ $light-theme-title-color: #0E121B;
 $light-theme-text-black: #232530;
 $light-theme-text-gray: #525866;
 
+//Dark theme
+$dark-theme-light-background: #2B303B;
+$dark-theme-dark-background: #232530;
+$dark-theme-title-color: #FFFFFF;
+$dark-theme-text-white: #F3F5F8;
+$dark-theme-text-gray: #CACFD8;
+
 
 $button: #335CFF;
 $delete-button: #FB3748;
