--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -1,9 +1,9 @@
-<section>
+<section [ngClass]="currentTheme + '-theme'">
     <main>
-        <img src="" alt="">
+        <img src="/assets/../assets/images/logo.svg" alt="">
         <h1>Welcome to Notes</h1>
-        <p>please log in to continue</p>
+        <p>Please log in to continue</p>
         <login-form></login-form>
-        <p>No account yet<a href="">Sign up</a></p>
+        <p>No account yet <a href="">Sign up</a></p>
     </main>
 </section>
