--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -1,6 +1,8 @@
 <section [ngClass]="currentTheme + '-theme'">
     <main>
-        <img src="/assets/../assets/images/logo.svg" alt="">
+        <div class="logo-div">
+            <img src="/assets/../assets/images/logo.svg" alt="logo">
+        </div>
         <h1>Welcome to Notes</h1>
         <p>Please log in to continue</p>
         <login-form></login-form>
