--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -9,3 +9,14 @@ section{
     align-items: center;
     justify-content: center;
 }
+
+main{
+    height: 618px;
+    width: 540px;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
