--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<button (click)="toggleTheme()">Toggle Theme</button>
+<!--<button (click)="toggleTheme()">Toggle Theme</button> -->
 
 <login-page></login-page>
 
