--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -1,1 +1,6 @@
-<p>login-form works!</p>
+<form action="">
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email">
+    <label for="password">password:</label>
+    <input type="password" name="password" id="password">
+</form>
