add classes to tags in order to change them with themes

--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -3,9 +3,11 @@
         <div class="logo-div">
             <img src="/assets/../assets/images/logo.svg" alt="logo">
         </div>
-        <h1>Welcome to Notes</h1>
-        <p>Please log in to continue</p>
+        <div class="weolcome-div">
+            <h1 class="title">Welcome to Notes</h1>
+            <p class="text-secondary">Please log in to continue</p>
+        </div>
         <login-form></login-form>
-        <p>No account yet <a href="">Sign up</a></p>
+        <p class="text-secondary">No account yet <a href="" class="text-primary">Sign up</a></p>
     </main>
 </section>
