--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -14,9 +14,12 @@ main{
     height: 618px;
     width: 540px;
     display: flex;
-    padding: 20px;
+    padding: 4rem;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     border-radius: 10px;
+}
+
+.logo-div{
+    margin-bottom: 2rem;
 }
