add styles to login page component

--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -3,11 +3,11 @@
         <div class="logo-div">
             <img src="/assets/../assets/images/logo.svg" alt="logo">
         </div>
-        <div class="weolcome-div">
+        <div class="welcome-div">
             <h1 class="title">Welcome to Notes</h1>
-            <p class="text-secondary">Please log in to continue</p>
+            <p class="text-secondary login-message">Please log in to continue</p>
         </div>
-        <login-form></login-form>
+        <login-form ></login-form>
         <p class="text-secondary">No account yet <a href="" class="text-primary">Sign up</a></p>
     </main>
 </section>
