--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -14,7 +14,7 @@ main{
     height: 618px;
     width: 540px;
     display: flex;
-    padding: 4rem;
+    padding: 3rem;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
@@ -22,4 +22,12 @@ main{
 
 .logo-div{
     margin-bottom: 2rem;
+}
+
+.login-message{
+    text-align: center;
+}
+
+.welcome-div{
+    
 }
