finish styles for desktop view

--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -1,6 +1,13 @@
-<form action="">
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email">
-    <label for="password">password:</label>
-    <input type="password" name="password" id="password">
+<form action="" >
+    <div class="input-div">
+        <label for="email">Email Address</label>
+        <input type="email" name="email" id="email" placeholder="email@example.com">
+    </div>
+    <a href="" class="anchor-forgot-password">Forgot</a>
+    <div class="input-div">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password">
+    </div>
+    <button>Login</button>
+
 </form>
