finish styles for desktop view

--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -8,6 +8,13 @@
             <p class="text-secondary login-message">Please log in to continue</p>
         </div>
         <login-form ></login-form>
-        <p class="text-secondary">No account yet <a href="" class="text-primary">Sign up</a></p>
+
+        <hr>
+        <div class="google-login">
+            <p class="google-login-text text-secondary">Or log in with:</p>
+            <button class="google-login-btn">Google</button>
+        </div>
+        <hr>
+        <p class="text-secondary text-no-account">No account yet? <a href="" class="text-primary anchor-sign-up">Sign up</a></p>
     </main>
 </section>
