--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -26,8 +26,48 @@ main{
 
 .login-message{
     text-align: center;
+    font-size: 14px;
 }
 
 .welcome-div{
-    
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+hr{
+    border: 1px solid rgba(160, 159, 159, 0.226);
+    width: 100%;
+    margin: 1rem 0  0.5rem 0;
+}
+
+.google-login{
+    width: 100%;
+}
+
+.google-login-text{
+    font-size: 14px;
+    margin: 0.5rem 0  1rem 0;
+    text-align: center;
+}
+
+.google-login-btn{
+    width: 100%;
+    height: 45px;
+    border-radius: 10px;
+    border: 2px solid rgba(160, 159, 159, 0.226);
+    outline: none;
+    background-color: white !important;
+    color: black !important;
+}
+
+.text-no-account{
+    margin-top: 0.5rem;
+    font-size: 14px;
+}
+
+.anchor-sign-up{
+    text-decoration: none;
 }
