add style rule to anchors

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,10 @@ $themes: (
         font-size: 15px;
       }
 
+      a{
+        color: map-get($values , text-secondary);
+      }
+
       .delete-btn {
         background-color: map-get($values, button-delete);
       }
