--- a/src/components/login-form/login-form.component.scss
+++ b/src/components/login-form/login-form.component.scss
@@ -14,6 +14,12 @@ form{
     width: 444px;
     height: 232px;
     position: relative;
+    margin-top: 2rem;
+
+    @media (max-width: 700px){
+        width: 343px;
+        padding: 1rem;
+    }
 }
 
 label{
@@ -44,6 +50,10 @@ input{
     right: 0%;
     top: 40%;
     font-size: 14px;
+
+    @media (max-width: 700px){
+        right: 5%;
+    }
 }
 
 button{
