--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -18,6 +18,12 @@ main{
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+
+    @media (max-width: 700px) {
+        height: 603px;
+        width: 343px;
+        padding: 1rem;
+    }
 }
 
 .logo-div{
