--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -1,20 +1,3 @@
 <section [ngClass]="currentTheme + '-theme'">
-    <main>
-        <div class="logo-div">
-            <img src="/assets/../assets/images/logo.svg" alt="logo">
-        </div>
-        <div class="welcome-div">
-            <h1 class="title">Welcome to Notes</h1>
-            <p class="text-secondary login-message">Please log in to continue</p>
-        </div>
-        <login-form ></login-form>
-
-        <hr>
-        <div class="google-login">
-            <p class="google-login-text text-secondary">Or log in with:</p>
-            <button class="google-login-btn">Google</button>
-        </div>
-        <hr>
-        <p class="text-secondary text-no-account">No account yet? <a href="" class="text-primary anchor-sign-up">Sign up</a></p>
-    </main>
+    <register></register>
 </section>
