--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-
-<!--<button (click)="toggleTheme()">Toggle Theme</button> -->
-
-<login-page></login-page>
-
-
-<router-outlet />
+<button (click)="toggleTheme()">Toggle Theme</button>
+<section [ngClass]="currentTheme + '-theme'">
+    <router-outlet></router-outlet>
+</section>
