--- a/src/components/register/register.component.scss
+++ b/src/components/register/register.component.scss
@@ -12,4 +12,40 @@ main{
         width: 343px;
         padding: 1rem;
     }
+
+    .logo-div{
+        margin-bottom: 2rem;
+    }
+
+    .sign-up-message{
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .create-account-div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .sign-up-message{
+        text-align: center;
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 444px;
+        height: 232px;
+        position: relative;
+        margin-top: 2rem;
+    
+        @media (max-width: 700px){
+            width: 343px;
+            padding: 1rem;
+        }
+    }
 }
