add register html tags

--- a/src/components/register/register.component.html
+++ b/src/components/register/register.component.html
@@ -20,13 +20,11 @@
             <label for="confirm-password">Confirm Password</label>
             <input type="password" name="confirm-password" id="confirm-password">
         </div>
-        <button>Sign Up</button>
+        <button class="register-btn">Sign Up</button>
     </form>
-    <hr>
             <div class="google-login">
                 <p class="google-login-text text-secondary">Or log in with:</p>
                 <button class="google-login-btn">Google</button>
             </div>
-            <hr>
             <p class="text-secondary text-no-account">No account yet? <a href="" class="text-primary anchor-sign-up">Sign up</a></p>
 </main>
