--- a/src/components/register/register.component.scss
+++ b/src/components/register/register.component.scss
@@ -1,6 +1,6 @@
 main{
     width: 540px;
-    height: 646px;
+    height: 636px;
     padding: 3rem;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@ main{
     border-radius: 10px;
 
     @media (max-width: 700px) {
-        height: 603px;
+        height: 693px;
         width: 343px;
         padding: 1rem;
     }
@@ -39,13 +39,67 @@ main{
         justify-content: space-evenly;
         align-items: center;
         width: 444px;
-        height: 232px;
+        height: 285px;
         position: relative;
         margin-top: 2rem;
+        margin-bottom: 2rem;
     
         @media (max-width: 700px){
             width: 343px;
             padding: 1rem;
         }
     }
+
+    label{
+        font-weight: 600;
+        display: block;
+        width: 100%;
+        font-size: 14px;
+        margin-bottom: 0.5rem;
+    }
+
+    .input-div{
+        width: 100%;
+    }
+
+    input{
+        display: inline-block;
+        width: 100%;
+        padding: 0.5rem;
+        border-radius: 5px;
+        outline: none;
+        border: 1px solid #adb4c4;
+        height: 40px;
+        margin-bottom: 1rem;
+    }
+
+    button{
+        width: 100%;
+        border: none;
+        height: 45px;
+        border-radius: 10px;
+    }
+
+    .google-login{
+        width: 100%;
+    }
+    
+    .google-login-text{
+        font-size: 14px;
+        margin: 0.5rem 0  1rem 0;
+        text-align: center;
+    }
+    
+    .google-login-btn{
+        width: 100%;
+        height: 45px;
+        border-radius: 10px;
+        border: 2px solid rgba(160, 159, 159, 0.226);
+        outline: none;
+        background-color: white !important;
+        color: black !important;
+        margin-bottom: 0.5rem;
+    }
+    
+
 }
