--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -12,7 +12,7 @@
         <label for="email">Email Address</label>
         <input type="email" name="email" id="email" placeholder="email@example.com">
     </div>
-    <a href="" class="anchor-forgot-password">Forgot</a>
+    <a [routerLink]="['/forgot-password']"  class="anchor-forgot-password">Forgot</a>
     <div class="input-div">
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
@@ -25,5 +25,5 @@
             <button class="google-login-btn">Google</button>
         </div>
         <hr>
-        <p class="text-secondary text-no-account">No account yet? <a href="" class="text-primary anchor-sign-up">Sign up</a></p>
+        <p class="text-secondary text-no-account">No account yet? <a  [routerLink]="['/register']" class="text-primary anchor-sign-up">Sign up</a></p>
 </main>
