add routerlinks and finish styles

--- a/src/components/register/register.component.html
+++ b/src/components/register/register.component.html
@@ -26,5 +26,5 @@
                 <p class="google-login-text text-secondary">Or log in with:</p>
                 <button class="google-login-btn">Google</button>
             </div>
-            <p class="text-secondary text-no-account">No account yet? <a href="" class="text-primary anchor-sign-up">Sign up</a></p>
+            <p class="text-secondary text-no-account">No account yet? <a [routerLink]="['/register']" class="text-primary anchor-sign-up">Sign up</a></p>
 </main>
