--- a/src/components/forgot-password/forgot-password.component.html
+++ b/src/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,21 @@
-<p>forgot-password works!</p>
+
+<main>
+    <div class="logo-div">
+        <img src="/assets/../assets/images/logo.svg" alt="logo">
+    </div>
+    <div class="forgot-password-div">
+        <h1 class="title">Reset Your Password</h1>
+        <p class="text-secondary sign-up-message">Choose a new password to secure your account.</p>
+    </div>
+    <form action="" >
+        <div class="input-div">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+        </div>
+        <div class="input-div">
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" name="confirm-password" id="confirm-password">
+        </div>
+        <button class="register-btn">Reset Password</button>
+    </form>
+</main>
