add password view img

--- a/src/components/forgot-password/forgot-password.component.html
+++ b/src/components/forgot-password/forgot-password.component.html
@@ -1,20 +1,22 @@
 
 <main>
     <div class="logo-div">
-        <img src="/assets/../assets/images/logo.svg" alt="logo">
+        <img src="/assets/images/logo.svg" alt="logo">
     </div>
     <div class="forgot-password-div">
         <h1 class="title">Reset Your Password</h1>
-        <p class="text-secondary sign-up-message">Choose a new password to secure your account.</p>
+        <p class="text-secondary password-message">Choose a new password to secure your account.</p>
     </div>
     <form action="" >
         <div class="input-div">
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
+            <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
         </div>
         <div class="input-div">
             <label for="confirm-password">Confirm Password</label>
             <input type="password" name="confirm-password" id="confirm-password">
+            <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
         </div>
         <button class="register-btn">Reset Password</button>
     </form>
