--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -16,6 +16,7 @@
     <div class="input-div">
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
+        <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
     </div>
     <button>Login</button>
 </form>
