--- a/src/components/register/register.component.html
+++ b/src/components/register/register.component.html
@@ -15,10 +15,12 @@
         <div class="input-div">
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
+            <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
         </div>
         <div class="input-div">
             <label for="confirm-password">Confirm Password</label>
             <input type="password" name="confirm-password" id="confirm-password">
+            <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
         </div>
         <button class="register-btn">Sign Up</button>
     </form>
