--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button (click)="toggleTheme()">Toggle Theme</button>
+<!-- <button (click)="toggleTheme()">Toggle Theme</button>-->
 <section [ngClass]="currentTheme + '-theme'">
     <router-outlet></router-outlet>
 </section>
