add navigation tags>

--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -1,1 +1,26 @@
-<p>navigation works!</p>
+<aside>
+    <div class="logo-div">
+        <img src="assets/images/logo.svg" alt="logo">
+    </div>
+    <div class="content-div">
+        <ol class="content-list">
+            <div class="content">
+                <img src="assets/images/icon-home.svg" alt="home icon" class="content-img">
+                <p class="content-paragraph">All Notes</p>
+            </div>
+            <div class="content">
+                <img src="assets/images/icon-archive.svg" alt="archive icon" class="content-img">
+                <p class="content-paragraph">Archived Notes</p>
+            </div>
+        </ol>
+    </div>
+    <hr>
+    <div class="tags-div">
+        <ul class="tags-list">
+            <div class="tag">
+                <img src="assets/images/icon-tag.svg" alt="tag icon" class="tag-img">
+                <p class="tag-paragraph">Cooking</p>
+            </div>
+        </ul>
+    </div>
+</aside>
