change aside to div

--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<aside>
+<div class="navigation-menu">
     <div class="logo-div">
         <img src="assets/images/logo.svg" alt="logo">
     </div>
@@ -23,4 +23,10 @@
             </div>
         </ul>
     </div>
-</aside>
+</div>
+
+<!-- <div class="navigation-menu-mobile">
+    <ul class="menu">
+        
+    </ul>
+</div> -->
