--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -7,18 +7,18 @@
         <p class="text-secondary login-message">Please log in to continue</p>
     </div>
 
-<form action="" >
+<form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
     <div class="input-div">
         <label for="email">Email Address</label>
-        <input type="email" name="email" id="email" placeholder="email@example.com">
+        <input type="email" name="username" id="email" placeholder="email@example.com" [(ngModel)]="credentials.username"  required>
     </div>
     <a [routerLink]="['/forgot-password']"  class="anchor-forgot-password">Forgot</a>
     <div class="input-div">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-        <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password">
+        <input type="password" name="password" id="password" [(ngModel)]="credentials.password" required>
+        <!-- <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password"> -->
     </div>
-    <button>Login</button>
+    <button type="submit">Login</button>
 </form>
 <hr>
         <div class="google-login">
