fix anchors to navigate other pages

--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -18,7 +18,7 @@
         <input type="password" name="password" id="password" [(ngModel)]="credentials.password" required>
         <!-- <img src="assets/images/icon-show-password.svg" alt="" class="toggle-password"> -->
     </div>
-    <button type="submit">Login</button>
+    <button type="submit" onclick="">Login</button>
 </form>
 <hr>
         <div class="google-login">
