add monile menu

--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -3,6 +3,28 @@
         <img src="assets/images/logo.svg" alt="logo">
     </div>
     <div class="content-div">
+        <ol class="mobile-menu">
+            <li class="mobile-menu-item">
+                <img src="" alt="">
+                <p class="mobile-menu-title"></p>
+            </li>
+            <li class="mobile-menu-item">
+                <img src="" alt="">
+                <p class="mobile-menu-title"></p>
+            </li>
+            <li class="mobile-menu-item">
+                <img src="" alt="">
+                <p class="mobile-menu-title"></p>
+            </li>
+            <li class="mobile-menu-item">
+                <img src="" alt="">
+                <p class="mobile-menu-title"></p>
+            </li>
+            <li class="mobile-menu-item">
+                <img src="" alt="">
+                <p class="mobile-menu-title"></p>
+            </li>
+        </ol>
         <ol class="content-list">
             <div class="content">
                 <img src="assets/images/icon-home.svg" alt="home icon" class="content-img">
@@ -24,9 +46,3 @@
         </ul>
     </div>
 </div>
-
-<!-- <div class="navigation-menu-mobile">
-    <ul class="menu">
-        
-    </ul>
-</div> -->
