add tablet position styles to mobile menu

--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -3,28 +3,6 @@
         <img src="assets/images/logo.svg" alt="logo">
     </div>
     <div class="content-div">
-        <ol class="mobile-menu">
-            <li class="mobile-menu-item">
-                <img src="" alt="">
-                <p class="mobile-menu-title"></p>
-            </li>
-            <li class="mobile-menu-item">
-                <img src="" alt="">
-                <p class="mobile-menu-title"></p>
-            </li>
-            <li class="mobile-menu-item">
-                <img src="" alt="">
-                <p class="mobile-menu-title"></p>
-            </li>
-            <li class="mobile-menu-item">
-                <img src="" alt="">
-                <p class="mobile-menu-title"></p>
-            </li>
-            <li class="mobile-menu-item">
-                <img src="" alt="">
-                <p class="mobile-menu-title"></p>
-            </li>
-        </ol>
         <ol class="content-list">
             <div class="content">
                 <img src="assets/images/icon-home.svg" alt="home icon" class="content-img">
@@ -46,3 +24,25 @@
         </ul>
     </div>
 </div>
+<ol class="mobile-menu">
+    <li class="mobile-menu-item">
+        <img src="assets/images/icon-home.svg" alt="Home icon">
+        <p class="mobile-menu-title">Home</p>
+    </li>
+    <li class="mobile-menu-item">
+        <img src="assets/images/icon-search.svg" alt="Search icon">
+        <p class="mobile-menu-title">Search</p>
+    </li>
+    <li class="mobile-menu-item">
+        <img src="assets/images/icon-archive.svg" alt="Archive icon">
+        <p class="mobile-menu-title">Archive</p>
+    </li>
+    <li class="mobile-menu-item">
+        <img src="assets/images/icon-tag.svg" alt="Tag icon">
+        <p class="mobile-menu-title">Tag</p>
+    </li>
+    <li class="mobile-menu-item">
+        <img src="assets/images/icon-settings.svg" alt="Setting icon">
+        <p class="mobile-menu-title">Settings</p>
+    </li>
+</ol>
