change styles and positioning to do not ovelap header

--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -5,11 +5,11 @@
     <div class="content-div">
         <ol class="content-list">
             <div class="content">
-                <img src="assets/images/icon-home.svg" alt="home icon" class="content-img">
+                <img src="assets/images/icon-home.svg" alt="home icon" class="content-img icon">
                 <p class="content-paragraph">All Notes</p>
             </div>
             <div class="content">
-                <img src="assets/images/icon-archive.svg" alt="archive icon" class="content-img">
+                <img src="assets/images/icon-archive.svg" alt="archive icon" class="content-img icon">
                 <p class="content-paragraph">Archived Notes</p>
             </div>
         </ol>
@@ -18,31 +18,33 @@
     <div class="tags-div">
         <ul class="tags-list">
             <div class="tag">
-                <img src="assets/images/icon-tag.svg" alt="tag icon" class="tag-img">
+                <img src="assets/images/icon-tag.svg" alt="tag icon" class="tag-img icon">
                 <p class="tag-paragraph">Cooking</p>
             </div>
         </ul>
     </div>
 </div>
-<ol class="mobile-menu">
-    <li class="mobile-menu-item">
-        <img src="assets/images/icon-home.svg" alt="Home icon">
-        <p class="mobile-menu-title">Home</p>
-    </li>
-    <li class="mobile-menu-item">
-        <img src="assets/images/icon-search.svg" alt="Search icon">
-        <p class="mobile-menu-title">Search</p>
-    </li>
-    <li class="mobile-menu-item">
-        <img src="assets/images/icon-archive.svg" alt="Archive icon">
-        <p class="mobile-menu-title">Archive</p>
-    </li>
-    <li class="mobile-menu-item">
-        <img src="assets/images/icon-tag.svg" alt="Tag icon">
-        <p class="mobile-menu-title">Tag</p>
-    </li>
-    <li class="mobile-menu-item">
-        <img src="assets/images/icon-settings.svg" alt="Setting icon">
-        <p class="mobile-menu-title">Settings</p>
-    </li>
-</ol>
+<div class="mobile-menu-div">
+    <ol class="mobile-menu">
+        <li class="mobile-menu-item right-border-item">
+            <img src="assets/images/icon-home.svg" alt="Home icon" class="icon">
+            <p class="mobile-menu-title">Home</p>
+        </li>
+        <li class="mobile-menu-item right-border-item">
+            <img src="assets/images/icon-search.svg" alt="Search icon" class="icon">
+            <p class="mobile-menu-title">Search</p>
+        </li>
+        <li class="mobile-menu-item right-border-item">
+            <img src="assets/images/icon-archive.svg" alt="Archive icon" class="icon">
+            <p class="mobile-menu-title">Archive</p>
+        </li>
+        <li class="mobile-menu-item right-border-item">
+            <img src="assets/images/icon-tag.svg" alt="Tag icon" class="icon">
+            <p class="mobile-menu-title">Tag</p>
+        </li>
+        <li class="mobile-menu-item">
+            <img src="assets/images/icon-settings.svg" alt="Setting icon" class="icon">
+            <p class="mobile-menu-title">Settings</p>
+        </li>
+    </ol>
+</div>
