--- a/src/components/navigation/navigation.component.scss
+++ b/src/components/navigation/navigation.component.scss
@@ -89,6 +89,16 @@ hr{
 
 .mobile-menu-item{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 20%;
+
+    .mobile-menu-title{
+        margin-top: 0.5rem;
+    }
+}
+
+.right-border-item{
+    border-right: 1px solid #8080803d;
 }
