add text editor to notes component

--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -1,4 +1,7 @@
 <main>
+    <header-component></header-component>
     <navigation></navigation>
+    <notes-content></notes-content>
+    <text-editor></text-editor>
 </main>
 
