--- a/src/components/forgot-password/forgot-password.component.scss
+++ b/src/components/forgot-password/forgot-password.component.scss
@@ -6,6 +6,10 @@ main{
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     @media (max-width: 700px) {
         height: 693px;
