--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -7,6 +7,10 @@ main{
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     @media (max-width: 700px) {
         height: 603px;
