--- a/src/components/text-editor/text-editor.component.scss
+++ b/src/components/text-editor/text-editor.component.scss
@@ -13,7 +13,26 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 1rem;
 }
+
+.toolbar-text-format-btn{
+    background-color: grey !important;
+    min-width: 50px;
+    border-radius: 10px;
+    height: 30px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.toolbar-text-format-btn:hover{
+    background-color: rgb(199, 196, 196) !important;
+}
+
+.toolbar-text-format-btn:active{
+    background-color: azure !important;
+}
+
 
 .editor{
     height: calc(100vh - 200px);
