--- a/src/components/notes-content/notes-content.component.html
+++ b/src/components/notes-content/notes-content.component.html
@@ -1,1 +1,9 @@
-<p>notes-content works!</p>
+<div class="note-content-div">
+    <div class="note-content-details">
+        <h2 class="note-content-title">Title</h2>
+        <div class="note-content-tags-div">
+            <span class="tags-title"><img src="asstet/images/icon-tag.svg" alt="tag icon"></span><span class="tags"></span>
+        </div>
+        <hr>
+    </div>
+</div>
