--- a/src/components/text-editor/text-editor.component.html
+++ b/src/components/text-editor/text-editor.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="text-editor-options">
         <button class="btn save-btn" (click)="saveContent()">Save Note</button>
-        <button class="btn delete-btn" (click)="saveContent()">Delete Note</button>
+        <button class="btn delete-btn" (click)="deleteContent()">Delete Note</button>
     </div>
 </div>
 
