add all notes component to the notes component

--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -2,6 +2,7 @@
     <header-component></header-component>
     <navigation></navigation>
     <notes-content></notes-content>
+    <all-notes></all-notes>
     <text-editor></text-editor>
 </main>
 
