add mobile styles to all notes component

--- a/src/components/all-notes/all-notes.component.html
+++ b/src/components/all-notes/all-notes.component.html
@@ -1,5 +1,5 @@
 <div class="all-notes-div">
-    <button>+ Create New Note</button>
+    <button class="create-note-btn">+ Create New Note</button>
     <div class="notes-list-div">
         <ul class="notes-list">
             <li class="note-item">
